fixed scroll-bar style bleed-over Fixed the scroll-bar stylings in reports component bleeding into other expansion panel stylings

--- a/kohese-portal/client/src/components/reports/reports.component.scss
+++ b/kohese-portal/client/src/components/reports/reports.component.scss
@@ -17,12 +17,24 @@
 
 @import '../../app.component';
 
-::ng-deep .mat-expansion-panel-content {
-  height: 300px;
-  overflow: auto !important;
-}
+:host {
+  ::ng-deep .mat-expansion-panel-content {
+      height: 300px;
+      overflow: hidden;
+    }
 
-::ng-deep .mat-expansion-panel-body {
-  height: 100%;
-  width: 100%;
+    ::ng-deep .mat-expansion-panel-body {
+      height: 100%;
+      width: 100%;
+    }
+
+  .reports-container {
+    height: 95%;
+
+    .reports-content {
+      overflow: auto;
+    }
+
+  }
+
 }
